fix: fixed horizontal scroll not scrolling on compressed

--- a/menu-app/src/app/menu-components/menu/menu.component.scss
+++ b/menu-app/src/app/menu-components/menu/menu.component.scss
@@ -32,19 +32,18 @@
   }
 }
 
+.sticky {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  overflow: hidden;
+  background: #ffffff;
+}
+
 .scrolling-wrapper {
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
-  background-color: white;
-
-  &.sticky {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    overflow: hidden;
-    background: #ffffff;
-  }
 
   .menu-section {
     padding: 14px 20px;
